--- a/examples/rbac/.terraform-docs.yml
+++ b/examples/rbac/.terraform-docs.yml
@@ -6,7 +6,7 @@ content: |-
   Recreate the RBAC examples from the [Using RBAC Authorization](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) on Kubernetes documentation.
 
   ```hcl
-  {{ include "main.tf.docs" }}
+  {{ include "main.tf" }}
   ```
 
   ## Running this module manually
