--- a/examples/rbac_submodule/.terraform-docs.yml
+++ b/examples/rbac_submodule/.terraform-docs.yml
@@ -6,7 +6,7 @@ content: |-
   Create RBAC resources using the sub-module directly.
 
   ```hcl
-  {{ include "main.tf.docs" }}
+  {{ include "main.tf" }}
   ```
 
   ## Running this module manually
