added labels to examples

--- a/examples/authn_authz/.terraform-docs.yml
+++ b/examples/authn_authz/.terraform-docs.yml
@@ -3,8 +3,8 @@ content: |-
 
   # Terraform Admin Example
 
-  Create `terraform-admin` kuberenetes service account and pass the auth token to the kubernetes provider.
-  These service account tokens will not expire and are ideal for deployments that take exceed 15 minutes.
+  Create kuberenetes service account named `terraform-admin` and pass the secret auth token to the kubernetes provider.
+  Service account tokens do not expire and are ideal for deployments that take exceed 15 minutes.
 
   ```hcl
   {{ include "main.tf" }}
