--- a/examples/rbac/.terraform-docs.yml
+++ b/examples/rbac/.terraform-docs.yml
@@ -3,7 +3,7 @@ content: |-
 
   # RBAC Example
 
-  Recreate the RBAC examples from the [Using RBAC Authorization](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) on Kubernetes documentation.
+  Recreate the Kubernetes RBAC examples from the [Using RBAC Authorization](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) documentation.
 
   ```hcl
   {{ include "main.tf" }}
