added terraform_rbac_test.go. added example for eks and AWS IAM Role annotation.

--- a/examples/eks/.terraform-docs.yml
+++ b/examples/eks/.terraform-docs.yml
@@ -1,10 +1,9 @@
 content: |-
   {{ .Header }}
 
-  # Authn Authz Example
+  # Basic Example
 
-  Create a Kubernetes service account named `terraform-admin` and pass the secret auth token to the [terraform-kubernetes-provider](https://registry.terraform.io/providers/hashicorp/kubernetes/latest/docs).
-  Service account tokens do not expire and are ideal for terraform deployments that exceed 15 minutes.
+  Create a Kubernetes service account with AWS S3 list and Kubernetes namespace get privileges. Then grant a pod these privileges by attaching the service account.
 
   ```hcl
   {{ include "main.tf" }}
@@ -22,7 +21,7 @@ content: |-
   1. Install [Terraform](https://www.terraform.io/) and make sure it's on your `PATH`.
   1. Install [Golang](https://golang.org/) and make sure this code is checked out into your `GOPATH`.
   1. `cd test`
-  1. `go test terraform_authn_authz_test.go -v`
+  1. `go test terraform_aws_iam_role_attachment_test.go -v`
 
   {{ .Requirements }}
 
